nexus-rt/tests/ui/view_derive_missing_field.stderr
error[E0609]: no field `qty` on type `&MyEvent`
  --> tests/ui/view_derive_missing_field.rs:14:5
   |
14 |     qty: u64,  // MyEvent doesn't have a field named "qty"
   |     ^^^ unknown field
   |
   = note: available fields are: `symbol`, `quantity`
